--- a/src/MinimalistVideo/MinimalistVideo.csproj
+++ b/src/MinimalistVideo/MinimalistVideo.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.1" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="7.10.0" />
     <PackageReference Include="OneOf" Version="3.0.271" />
+    <PackageReference Include="ValueOf" Version="2.0.31" />
   </ItemGroup>
 
 </Project>
