--- a/src/MinimalistVideo/MinimalistVideo.csproj
+++ b/src/MinimalistVideo/MinimalistVideo.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <BlazorWasmPrerenderingDeleteLoadingContents>true</BlazorWasmPrerenderingDeleteLoadingContents>
     <BlazorWasmPrerenderingMode>WebAssemblyPrerendered</BlazorWasmPrerenderingMode>
+    <GHPages>true</GHPages>
   </PropertyGroup>
 
 
@@ -20,6 +21,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.1" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="7.10.0" />
     <PackageReference Include="OneOf" Version="3.0.271" />
+    <PackageReference Include="PublishSPAforGitHubPages.Build" Version="3.0.0" />
     <PackageReference Include="ValueOf" Version="2.0.31" />
   </ItemGroup>
 
